# factorio-assistant

./: .env  .gitignore  AGENTS.md  CHANGES.md  common.py  config.yaml  conftest.py  d3dshot.py  entity_detector.ipynb  entity_detector.py  graphics.py  npext.py  overlay.py  overlay_client.py  overlay_server.py  pyproject.toml  recipes.yml  requirements.txt  sclearn_deps.py  train_character_ppo.py
assistant/: __init__.py  __main__.py  actions.py  character_nav_env.py  command_palette.py  event_bus.py  events.py  input_hook.py  key_capture.py  main.py  pid_controller.py  pid_service.py  scene_bloat.py  snail.py  snail_state.py  system_stats.py
cvutils/: __init__.py  conv.py
experiments/: 1.ipynb  2.ipynb  3.ipynb  test_path.py  test_select.py  test_select_color.py
hops/: hops.py
leaf/: __init__.py  state.py
leaf/renderers/: __init__.py  character_marker.py  coords.py  debug.py  history.py  hud.py  map_composite.py  map_hover.py  scene_visibility.py  ui_brects.py
map_graph/: __init__.py  builder.py  constants.py  indexes.py  metrics.py  models.py  service.py  store.py
mapar/: __init__.py  map_parser.py  snail.py
osdeps/: screen.py
spes/: spes.py
src/: main.py  main1.py
tests/: test_cvutils.py  test_mapar.py  test_rect.py
